Feat: Se realiza migracion de la base de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConection":"server=bfkxytwn9bgzdtfvozeu-mysql.services.clever-cloud.com;database=bfkxytwn9bgzdtfvozeu;user=uykkftvn9mck9gcb;password=jPcAvxWVpnfpPPwOQgpe"
+  }
 }
