Revert "Feat: Se realiza migracion de la base de datos"
This reverts commit 3bd3f1cf725b60e7a5f3044ca854e76f74edbcda.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConection":"server=bfkxytwn9bgzdtfvozeu-mysql.services.clever-cloud.com;database=bfkxytwn9bgzdtfvozeu;user=uykkftvn9mck9gcb;password=jPcAvxWVpnfpPPwOQgpe"
-  }
+  "AllowedHosts": "*"
 }
